@@ -2354,53 +2354,4 @@ Very High</property>
   </child>
 </widget>
 
-<widget class="GnomeAbout" id="about1">
-  <property name="border_width">5</property>
-  <property name="destroy_with_parent">False</property>
-  <property name="icon_name">soundconverter</property>
-  <property name="decorated">True</property>
-  <property name="skip_taskbar_hint">False</property>
-  <property name="skip_pager_hint">False</property>
-  <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
-  <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
-  <property name="focus_on_map">True</property>
-  <property name="logo">soundconverter-logo.svg</property>
-  <property name="copyright">Copyright © 2004 Lars Wirzenius &lt;liw@iki.fi&gt;
-Copyright © 2005-2007 Gautier Portet &lt;kassoulet@gmail.com&gt;</property>
-  <property name="comments" translatable="yes">GNOME Sound Conversion</property>
-  <property name="authors">Lars Wirzenius
-Gautier Portet
-
-Thanks to:
-	Guillaume Bedot
-	Dominik Zabłotny
-	Noa Resare
-	Nil Gradisnik
-	Elias Autio
-	Thom Pischke
-	Qball Cow
-	Janis Blechert
-	Brendan Martens
-	Jason Martens
-	Wouter Stomp
-	Joe Wrigley
-	Jonh Wendell
-	Regis Floret
-	Toni Fiz
-	Seketeli Apelete
-	Cristiano Canguçu
-	Adolfo González Blázquez
-	Marc E.
-	Tobias Kral
-	Hanno Böck
-	Pedro Alejandro López-Valencia
-	James Lee
-	Christopher Barrington-Leigh
-	Thomas Schwing
-	Remi Grolleau
-</property>
-  <property name="documenters">No documentation written.</property>
-  <property name="translator_credits"></property>
-</widget>
-
 </glade-interface>
